--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Language" content="en">
     <!-- Add other meta tags or CSS stylesheets for responsiveness, SEO, etc. -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+
     <!-- Header Section -->
     <header id="header">
     <a href="#" id="header-img"><img src="logo.jpeg" alt="CatShop Logo"></a> <!-- Replace "logo.png" with the actual file path or URL of your logo image -->
@@ -23,7 +25,11 @@
             <li><a href="#pricing">Pricing</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
+    <button id="nav-toggle" aria-label="Toggle Navigation">
+    <span class="nav-icon"><i class="fas fa-bars"></i></span>
+  </button>
     </nav>
+       <script src="click.js"></script>
 </header>
 
 
